// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render Empty 1`] = `
.c3 {
  box-sizing: border-box;
  margin-left: auto;
  margin-right: 0px;
}

.c4 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  background: #512FC9;
  color: rgba(255,255,255,0.87);
  min-height: 32px;
  font-size: 12px;
  padding: 0px 24px;
  width: 240px;
}

.c4:active {
  opacity: 0.56;
}

.c4:hover,
.c4:focus {
  background: #651FFF;
}

.c4:active {
  background: #354AA4;
}

.c4:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
}

.c7 {
  display: inline-block;
  transition: color 0.3s;
  color: #FFFFFF;
}

.c9 {
  display: inline-block;
  transition: color 0.3s;
  margin-right: 8px;
  color: #FFFFFF;
}

.c8 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 300;
  font-size: 16px;
  line-height: 32px;
  margin: 24px;
  color: rgba(255,255,255,0.87);
}

.c1 {
  box-sizing: border-box;
  margin-bottom: 24px;
  display: flex;
  align-items: center;
  flex-shrink: 0;
  border-bottom: 1px solid #1C254D;
  height: 56px;
  margin-left: -40px;
  margin-right: -40px;
  padding-left: 40px;
  padding-right: 40px;
}

.c2 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 300;
  font-size: 22px;
  line-height: 32px;
  margin: 0px;
  white-space: nowrap;
}

.c0 {
  box-sizing: border-box;
  padding-left: 40px;
  padding-right: 40px;
  display: flex;
  width: 100%;
  height: 100%;
  flex-direction: column;
}

.c0::after {
  content: ' ';
  padding-bottom: 24px;
}

.c5 {
  background: #222C59;
  box-shadow: 0 4px 16px rgba(0,0,0,0.24);
  border-collapse: collapse;
  border-spacing: 0;
  font-size: 12px;
  width: 100%;
}

.c5 > thead > tr > th,
.c5 > tbody > tr > th,
.c5 > tfoot > tr > th,
.c5 > thead > tr > td,
.c5 > tbody > tr > td,
.c5 > tfoot > tr > td {
  padding: 8px 8px;
  vertical-align: middle;
}

.c5 > thead > tr > th:first-child,
.c5 > tbody > tr > th:first-child,
.c5 > tfoot > tr > th:first-child,
.c5 > thead > tr > td:first-child,
.c5 > tbody > tr > td:first-child,
.c5 > tfoot > tr > td:first-child {
  padding-left: 24px;
}

.c5 > thead > tr > th:last-child,
.c5 > tbody > tr > th:last-child,
.c5 > tfoot > tr > th:last-child,
.c5 > thead > tr > td:last-child,
.c5 > tbody > tr > td:last-child,
.c5 > tfoot > tr > td:last-child {
  padding-right: 24px;
}

.c5 > tbody > tr > td {
  vertical-align: middle;
}

.c5 > thead > tr > th {
  background: #111B48;
  color: #FFFFFF;
  cursor: pointer;
  font-size: 10px;
  font-weight: 400;
  padding-bottom: 0;
  padding-top: 0;
  text-align: left;
  opacity: 0.75;
  text-transform: uppercase;
  white-space: nowrap;
}

.c5 > thead > tr > th .c6 {
  font-weight: bold;
  font-size: 8px;
  margin-left: 8px;
}

.c5 > tbody > tr > td {
  color: rgba(255,255,255,0.87);
  line-height: 16px;
}

.c5 tbody tr {
  border-bottom: 1px solid #1C254D;
}

.c5 tbody tr:hover {
  background-color: rgb(37,49,98);
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
    >
      <div
        class="c2"
      >
        Integrations
      </div>
      <div
        class="c3"
      >
        <a
          href="/web/integrations/new"
        >
          <button
            class="c4"
            kind="primary"
            width="240px"
          >
            Enroll new integration
          </button>
        </a>
      </div>
    </div>
    <table
      class="c5"
    >
      <thead>
        <tr>
          <th>
            <a>
              Integration
              <span
                class="c6 c7 icon icon-chevron-up "
                color="light"
                title="sort items asc"
              />
            </a>
          </th>
          <th
            style="cursor: default;"
          >
            Details
          </th>
          <th>
            <a>
              Status
              <span
                class="c6 c7 icon icon-chevrons-expand-vertical "
                color="light"
                title="sort items"
              />
            </a>
          </th>
          <th
            style="cursor: default;"
          />
        </tr>
      </thead>
      <tfoot>
        <tr>
          <td
            colspan="4"
          >
            <div
              class="c8"
              color="text.primary"
              style="display: flex; align-items: center; justify-content: center;"
            >
              <span
                class="c6 c9 icon icon-database "
                color="light"
              />
              No Integrations Found
            </div>
          </td>
        </tr>
      </tfoot>
    </table>
  </div>
</div>
`;

exports[`render Failed 1`] = `
.c5 {
  display: flex;
  align-items: center;
  justify-content: center;
  border-radius: 2px;
  box-sizing: border-box;
  box-shadow: 0 1px 4px rgba(0,0,0,0.24);
  margin: 0 0 24px 0;
  min-height: 40px;
  padding: 8px 16px;
  overflow: auto;
  word-break: break-word;
  line-height: 1.5;
  background: #f50057;
  color: #FFFFFF;
}

.c5 a {
  color: #FFFFFF;
}

.c3 {
  box-sizing: border-box;
  margin-left: auto;
  margin-right: 0px;
}

.c4 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  background: #512FC9;
  color: rgba(255,255,255,0.87);
  min-height: 32px;
  font-size: 12px;
  padding: 0px 24px;
  width: 240px;
}

.c4:active {
  opacity: 0.56;
}

.c4:hover,
.c4:focus {
  background: #651FFF;
}

.c4:active {
  background: #354AA4;
}

.c4:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
}

.c1 {
  box-sizing: border-box;
  margin-bottom: 24px;
  display: flex;
  align-items: center;
  flex-shrink: 0;
  border-bottom: 1px solid #1C254D;
  height: 56px;
  margin-left: -40px;
  margin-right: -40px;
  padding-left: 40px;
  padding-right: 40px;
}

.c2 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 300;
  font-size: 22px;
  line-height: 32px;
  margin: 0px;
  white-space: nowrap;
}

.c0 {
  box-sizing: border-box;
  padding-left: 40px;
  padding-right: 40px;
  display: flex;
  width: 100%;
  height: 100%;
  flex-direction: column;
}

.c0::after {
  content: ' ';
  padding-bottom: 24px;
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
    >
      <div
        class="c2"
      >
        Integrations
      </div>
      <div
        class="c3"
      >
        <a
          href="/web/integrations/new"
        >
          <button
            class="c4"
            kind="primary"
            width="240px"
          >
            Enroll new integration
          </button>
        </a>
      </div>
    </div>
    <div
      class="c5"
      kind="danger"
    >
      some error message
    </div>
  </div>
</div>
`;

exports[`render Loaded 1`] = `
.c3 {
  box-sizing: border-box;
  margin-left: auto;
  margin-right: 0px;
}

.c4 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  background: #512FC9;
  color: rgba(255,255,255,0.87);
  min-height: 32px;
  font-size: 12px;
  padding: 0px 24px;
  width: 240px;
}

.c4:active {
  opacity: 0.56;
}

.c4:hover,
.c4:focus {
  background: #651FFF;
}

.c4:active {
  background: #354AA4;
}

.c4:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
}

.c10 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  background: #2C3A73;
  border: 1px solid #1C254D;
  opacity: .87;
  color: rgba(255,255,255,0.87);
  font-size: 10px;
  min-height: 24px;
  padding: 0px 16px;
  height: 24px;
}

.c10:active {
  opacity: 0.56;
}

.c10:hover,
.c10:focus {
  background: #2C3A73;
  border: 1px solid rgba(255,255,255,0.1);
  opacity: 1;
}

.c10:active {
  opacity: 0.24;
}

.c10:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
}

.c7 {
  display: inline-block;
  transition: color 0.3s;
  color: #FFFFFF;
}

.c11 {
  display: inline-block;
  transition: color 0.3s;
  margin-left: 8px;
  margin-right: -8px;
  color: rgba(255,255,255,0.56);
  font-size: 14px;
}

.c12 {
  display: block;
  outline: none;
  padding-right: 8px;
}

.c8 {
  box-sizing: border-box;
  display: flex;
  align-items: center;
}

.c1 {
  box-sizing: border-box;
  margin-bottom: 24px;
  display: flex;
  align-items: center;
  flex-shrink: 0;
  border-bottom: 1px solid #1C254D;
  height: 56px;
  margin-left: -40px;
  margin-right: -40px;
  padding-left: 40px;
  padding-right: 40px;
}

.c2 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 300;
  font-size: 22px;
  line-height: 32px;
  margin: 0px;
  white-space: nowrap;
}

.c0 {
  box-sizing: border-box;
  padding-left: 40px;
  padding-right: 40px;
  display: flex;
  width: 100%;
  height: 100%;
  flex-direction: column;
}

.c0::after {
  content: ' ';
  padding-bottom: 24px;
}

.c5 {
  background: #222C59;
  box-shadow: 0 4px 16px rgba(0,0,0,0.24);
  border-collapse: collapse;
  border-spacing: 0;
  font-size: 12px;
  width: 100%;
}

.c5 > thead > tr > th,
.c5 > tbody > tr > th,
.c5 > tfoot > tr > th,
.c5 > thead > tr > td,
.c5 > tbody > tr > td,
.c5 > tfoot > tr > td {
  padding: 8px 8px;
  vertical-align: middle;
}

.c5 > thead > tr > th:first-child,
.c5 > tbody > tr > th:first-child,
.c5 > tfoot > tr > th:first-child,
.c5 > thead > tr > td:first-child,
.c5 > tbody > tr > td:first-child,
.c5 > tfoot > tr > td:first-child {
  padding-left: 24px;
}

.c5 > thead > tr > th:last-child,
.c5 > tbody > tr > th:last-child,
.c5 > tfoot > tr > th:last-child,
.c5 > thead > tr > td:last-child,
.c5 > tbody > tr > td:last-child,
.c5 > tfoot > tr > td:last-child {
  padding-right: 24px;
}

.c5 > tbody > tr > td {
  vertical-align: middle;
}

.c5 > thead > tr > th {
  background: #111B48;
  color: #FFFFFF;
  cursor: pointer;
  font-size: 10px;
  font-weight: 400;
  padding-bottom: 0;
  padding-top: 0;
  text-align: left;
  opacity: 0.75;
  text-transform: uppercase;
  white-space: nowrap;
}

.c5 > thead > tr > th .c6 {
  font-weight: bold;
  font-size: 8px;
  margin-left: 8px;
}

.c5 > tbody > tr > td {
  color: rgba(255,255,255,0.87);
  line-height: 16px;
}

.c5 tbody tr {
  border-bottom: 1px solid #1C254D;
}

.c5 tbody tr:hover {
  background-color: rgb(37,49,98);
}

.c13 {
  display: inline-block;
  height: 100%;
  max-height: 18px;
}

.c9 {
  box-sizing: border-box;
  border-radius: 50%;
  background-color: #ff5252;
  margin-right: 4px;
  width: 8px;
  height: 8px;
}

.c14 {
  box-sizing: border-box;
  border-radius: 50%;
  background-color: #00bfa5;
  margin-right: 4px;
  width: 8px;
  height: 8px;
}

.c15 {
  box-sizing: border-box;
  border-radius: 50%;
  background-color: #90a4ae;
  margin-right: 4px;
  width: 8px;
  height: 8px;
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
    >
      <div
        class="c2"
      >
        Integrations
      </div>
      <div
        class="c3"
      >
        <a
          href="/web/integrations/new"
        >
          <button
            class="c4"
            kind="primary"
            width="240px"
          >
            Enroll new integration
          </button>
        </a>
      </div>
    </div>
    <table
      class="c5"
    >
      <thead>
        <tr>
          <th>
            <a>
              Integration
              <span
                class="c6 c7 icon icon-chevron-up "
                color="light"
                title="sort items asc"
              />
            </a>
          </th>
          <th
            style="cursor: default;"
          >
            Details
          </th>
          <th>
            <a>
              Status
              <span
                class="c6 c7 icon icon-chevrons-expand-vertical "
                color="light"
                title="sort items"
              />
            </a>
          </th>
          <th
            style="cursor: default;"
          />
        </tr>
      </thead>
      <tbody>
        <tr>
          <td>
            <div
              class="c8"
            >
              acmeco
            </div>
          </td>
          <td>
            Messages will be sent to assigned reviewers and the "#access-requests" channel
          </td>
          <td>
            <div
              class="c8"
            >
              <div
                class="c9"
              />
              <td>
                Unauthorized
              </td>
            </div>
          </td>
          <td
            align="right"
          >
            <button
              class="c10"
              height="24px"
              kind="border"
            >
              OPTIONS
              <span
                class="c6 c11 icon icon-caret-down "
                color="text.secondary"
                font-size="2"
              />
            </button>
          </td>
        </tr>
        <tr>
          <td>
            <div
              class="c8"
            >
              <img
                class="c12 c13"
                size="18"
                src="file_stub"
              />
              Slack
            </div>
          </td>
          <td>
            Messages will be sent to assigned reviewers and the "#access-requests" channel
          </td>
          <td>
            <div
              class="c8"
            >
              <div
                class="c14"
              />
              <td>
                Running
              </td>
            </div>
          </td>
          <td
            align="right"
          >
            <button
              class="c10"
              height="24px"
              kind="border"
            >
              OPTIONS
              <span
                class="c6 c11 icon icon-caret-down "
                color="text.secondary"
                font-size="2"
              />
            </button>
          </td>
        </tr>
        <tr>
          <td>
            <div
              class="c8"
            >
              <img
                class="c12 c13"
                size="18"
                src="file_stub"
              />
              Slack
            </div>
          </td>
          <td>
            Messages will be sent to assigned reviewers and the "#access-requests" channel
          </td>
          <td>
            <div
              class="c8"
            >
              <div
                class="c15"
              />
              <td>
                Unknown
              </td>
            </div>
          </td>
          <td
            align="right"
          >
            <button
              class="c10"
              height="24px"
              kind="border"
            >
              OPTIONS
              <span
                class="c6 c11 icon icon-caret-down "
                color="text.secondary"
                font-size="2"
              />
            </button>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`render Processing 1`] = `
.c3 {
  box-sizing: border-box;
  margin-left: auto;
  margin-right: 0px;
}

.c5 {
  box-sizing: border-box;
  margin: 72px;
  text-align: center;
}

.c4 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  background: #512FC9;
  color: rgba(255,255,255,0.87);
  min-height: 32px;
  font-size: 12px;
  padding: 0px 24px;
  width: 240px;
}

.c4:active {
  opacity: 0.56;
}

.c4:hover,
.c4:focus {
  background: #651FFF;
}

.c4:active {
  background: #354AA4;
}

.c4:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
}

.c1 {
  box-sizing: border-box;
  margin-bottom: 24px;
  display: flex;
  align-items: center;
  flex-shrink: 0;
  border-bottom: 1px solid #1C254D;
  height: 56px;
  margin-left: -40px;
  margin-right: -40px;
  padding-left: 40px;
  padding-right: 40px;
}

.c2 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 300;
  font-size: 22px;
  line-height: 32px;
  margin: 0px;
  white-space: nowrap;
}

.c0 {
  box-sizing: border-box;
  padding-left: 40px;
  padding-right: 40px;
  display: flex;
  width: 100%;
  height: 100%;
  flex-direction: column;
}

.c0::after {
  content: ' ';
  padding-bottom: 24px;
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
    >
      <div
        class="c2"
      >
        Integrations
      </div>
      <div
        class="c3"
      >
        <a
          href="/web/integrations/new"
        >
          <button
            class="c4"
            kind="primary"
            width="240px"
          >
            Enroll new integration
          </button>
        </a>
      </div>
    </div>
    <div
      class="c5"
    />
  </div>
</div>
`;
